Fix background image on mobile

--- a/app/static/mystyle.css
+++ b/app/static/mystyle.css
@@ -177,7 +177,7 @@ a.current {
   */
 
 @media (min-width: 481px) and (max-width: 767px) {
-    body#bg {
+    body#bg:before {
         background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/hero768.jpg") no-repeat 50% 50% fixed;
         background-color: black;
     }
@@ -207,7 +207,7 @@ a.current {
   */
 
 @media (min-width: 320px) and (max-width: 480px) {
-    body#bg {
+    body#bg:before {
         background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/hero480.jpg") no-repeat 50% 50% fixed;
         background-color: black;
     }
